syntax = "proto3";
option go_package = "proto.client.type.classifier";

service ClientTypeClassifierService {
  rpc Create(CreateClientTypeClassifierRequest) returns (ClientTypeClassifierProfileResponse);
  rpc Read(SingleClientTypeClassifierRequest) returns (ClientTypeClassifierProfileResponse);
  rpc Update(UpdateClientTypeClassifierRequest) returns (SuccessResponse);
  rpc Delete(SingleClientTypeClassifierRequest) returns (SuccessResponse);
}

message CreateClientTypeClassifierRequest {
  int64 code = 1;
  string name = 2;
  string short_name = 3;
  int32 client_type = 4;
  string activation_date = 5;
  string deactivation_date = 6;
  int32 cbu_reference_key = 7;
  int32 old_code = 8;
  string old_name = 9;
}

message SingleClientTypeClassifierRequest {
  int64 id = 1;
}

message ClientTypeClassifierProfileResponse {
  int64 id = 1;
  int64 code = 2;
  string name = 3;
  string short_name = 4;
  int32 client_type = 5;
  string activation_date = 6;
  string deactivation_date = 7;
  int32 cbu_reference_key = 8;
  int32 old_code = 9;
  string old_name = 10;
}

message SuccessResponse {
  string response = 1;
}

message UpdateClientTypeClassifierRequest {
  int64 id = 1;
  int64 code = 2;
  string name = 3;
  string short_name = 4;
  int32 client_type = 5;
  string activation_date = 6;
  string deactivation_date = 7;
  int32 cbu_reference_key = 8;
  int32 old_code = 9;
  string old_name = 10;
}